Resolved Bug 13012 : Removed the code due to which gap appears between the ribbon and definition tab if we edit a definition after running calendar report.

--- a/Web Apps/DMI.NET/DMI.NET/Themes/layout.css
+++ b/Web Apps/DMI.NET/DMI.NET/Themes/layout.css
@@ -76,7 +76,6 @@
 }
 
 
-#tabs { margin-top: 10px; padding: 10px 0px 0px 0px; width: 100%; }
 #tabs > div { padding-left: 13px; xborder-bottom: 1px solid #bfbfbf; }
 
 #tabs a:hover { color: #666; }
